<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNoteActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/appBar"
        layout="@layout/app_bar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editNoteTitleText"
        android:layout_below="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNoteTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editNoteContentText"
        android:layout_below="@+id/editNoteTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNoteContentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/editNoteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:text="@string/edit_note"
        android:layout_marginHorizontal="5dp"/>
</RelativeLayout>